--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -694,9 +694,6 @@ a {
 .cid-sgJ3p6YF7L .navbar-dropdown {
   position: relative !important;
 }
-.cid-sgJ3p6YF7L .navbar-dropdown {
-  position: absolute !important;
-}
 .cid-sgJ3p6YF7L .dropdown-item:before {
   font-family: Moririse2 !important;
   content: "\e966";
@@ -792,7 +789,8 @@ a {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
 }
 .cid-sgJ3p6YF7L .navbar.opened {
   transition: all 0.3s;
@@ -1496,6 +1494,429 @@ a {
 .cid-sgKo58AFjf [class^="socicon-"]:before,
 .cid-sgKo58AFjf [class*=" socicon-"]:before {
   line-height: 55px;
+}
+.cid-sgKoBOIREI {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #2299aa;
+}
+.cid-sgKoBOIREI .media-container-row .mbr-text {
+  text-align: left;
+}
+.cid-sgKO3bvxP5 {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #2299aa;
+}
+.cid-sgKO3bvxP5 .mbr-text {
+  color: #c1c1c1;
+}
+.cid-sgKO3bvxP5 H3 {
+  color: #ffffff;
+}
+.cid-sgKwIoLQu1 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/sdcoeview-2000x1500.jpg");
+}
+.cid-sgKwIoLQu1 .card:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+.cid-sgKwIoLQu1 .card-wrapper {
+  background-color: #ffffff;
+  border-radius: 4px;
+}
+.cid-sgKwIoLQu1 .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sgKwIoLQu1 .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-sgKwIoLQu1 .social-row .soc-item .mbr-iconfont {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+  transition: all 0.3s;
+}
+.cid-sgKwIoLQu1 .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-sgKwIoLQu1 .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-sgKwIoLQu1 .card-box {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-sgKwIoLQu1 .card-box {
+    padding-right: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sgKwIoLQu1 .card-box {
+    padding-left: 2rem;
+    padding-right: 4rem;
+  }
+}
+.cid-sgKwIoLQu1 .card-title {
+  color: #2299aa;
+}
+.cid-sgJ3p6YF7L .navbar-dropdown {
+  position: relative !important;
+}
+.cid-sgJ3p6YF7L .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sgJ3p6YF7L .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-sgJ3p6YF7L .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-sgJ3p6YF7L .dropdown-item:hover,
+.cid-sgJ3p6YF7L .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-sgJ3p6YF7L .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-sgJ3p6YF7L .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-sgJ3p6YF7L .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-sgJ3p6YF7L .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-sgJ3p6YF7L .nav-link {
+  position: relative;
+}
+.cid-sgJ3p6YF7L .container {
+  display: flex;
+  margin: auto;
+}
+.cid-sgJ3p6YF7L .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-sgJ3p6YF7L .dropdown-menu,
+.cid-sgJ3p6YF7L .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-sgJ3p6YF7L .nav-item:focus,
+.cid-sgJ3p6YF7L .nav-link:focus {
+  outline: none;
+}
+.cid-sgJ3p6YF7L .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-sgJ3p6YF7L .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sgJ3p6YF7L .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-sgJ3p6YF7L .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sgJ3p6YF7L .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-sgJ3p6YF7L .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-sgJ3p6YF7L .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+}
+.cid-sgJ3p6YF7L .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-sgJ3p6YF7L .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-sgJ3p6YF7L .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-sgJ3p6YF7L .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed {
+  justify-content: center;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-sgJ3p6YF7L .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-sgJ3p6YF7L .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-sgJ3p6YF7L .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-sgJ3p6YF7L .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-sgJ3p6YF7L .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-sgJ3p6YF7L .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-sgJ3p6YF7L .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-sgJ3p6YF7L .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-sgJ3p6YF7L .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-sgJ3p6YF7L .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-sgJ3p6YF7L .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-sgJ3p6YF7L .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-sgJ3p6YF7L .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-sgJ3p6YF7L .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-sgJ3p6YF7L .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-sgJ3p6YF7L .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-sgJ3p6YF7L .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-sgJ3p6YF7L .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-sgJ3p6YF7L .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-sgJ3p6YF7L .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-sgJ3p6YF7L .dropdown-item.active,
+.cid-sgJ3p6YF7L .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-sgJ3p6YF7L .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-sgJ3p6YF7L .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-sgJ3p6YF7L .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-sgJ3p6YF7L .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-sgJ3p6YF7L .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-sgJ3p6YF7L .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-sgJ3p6YF7L ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-sgJ3p6YF7L .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-sgJ3p6YF7L button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-sgJ3p6YF7L button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-sgJ3p6YF7L button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-sgJ3p6YF7L button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-sgJ3p6YF7L button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-sgJ3p6YF7L button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-sgJ3p6YF7L nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-sgJ3p6YF7L nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-sgJ3p6YF7L nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-sgJ3p6YF7L nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-sgJ3p6YF7L .navbar-dropdown {
+  padding: 0 1rem;
+}
+.cid-sgJ3p6YF7L a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-sgJ3p6YF7L .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-sgJ3p6YF7L .navbar {
+    height: 70px;
+  }
+  .cid-sgJ3p6YF7L .navbar.opened {
+    height: auto;
+  }
+  .cid-sgJ3p6YF7L .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
 }
 .cid-sgKoBOIREI {
   padding-top: 15px;
