Logo size matters

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -691,11 +691,14 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-sgJ3p6YF7L .navbar-dropdown {
-  position: relative !important;
+.cid-sgJ3p6YF7L {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
 }
-.cid-sgJ3p6YF7L .navbar-dropdown {
-  position: absolute !important;
+.cid-sgJ3p6YF7L nav.navbar {
+  position: fixed;
 }
 .cid-sgJ3p6YF7L .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -792,7 +795,8 @@ a {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
 }
 .cid-sgJ3p6YF7L .navbar.opened {
   transition: all 0.3s;
@@ -818,7 +822,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-sgJ3p6YF7L .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3rem);
+    max-height: calc(98.5vh - 6rem);
   }
 }
 .cid-sgJ3p6YF7L .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1010,6 +1014,7 @@ a {
 }
 .cid-sgJ3p6YF7L .navbar-dropdown {
   padding: 0 1rem;
+  position: fixed;
 }
 .cid-sgJ3p6YF7L a.nav-link {
   display: flex;
@@ -1575,8 +1580,14 @@ a {
 .cid-sgKwIoLQu1 .card-title {
   color: #2299aa;
 }
-.cid-sgJ3p6YF7L .navbar-dropdown {
-  position: relative !important;
+.cid-sgJ3p6YF7L {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-sgJ3p6YF7L nav.navbar {
+  position: fixed;
 }
 .cid-sgJ3p6YF7L .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -1700,7 +1711,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-sgJ3p6YF7L .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3rem);
+    max-height: calc(98.5vh - 6rem);
   }
 }
 .cid-sgJ3p6YF7L .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1892,6 +1903,7 @@ a {
 }
 .cid-sgJ3p6YF7L .navbar-dropdown {
   padding: 0 1rem;
+  position: fixed;
 }
 .cid-sgJ3p6YF7L a.nav-link {
   display: flex;
