--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -757,7 +757,7 @@ a {
 .cid-sgJ3GKcRvD {
   padding-top: 1rem;
   padding-bottom: 3rem;
-  background-color: #e6c63b;
+  background-color: #239aaa;
 }
 .cid-sgJ3GKcRvD .row {
   margin-left: 0;
